# Fault-Tolerant-Quantum-Compiler

./: .dockerignore  .gitignore  .gitmodules  .metric_analysis.txt.swp  CMakeLists.txt  Dockerfile  Dockerfile.PGO  Dockerfile.PGO.dockerignore  Dockerfile.compare  Dockerfile.wisq  README.md  UML.drawio  bib.bib  conn_wisq_minus5_parity_wisqconn.csv  example.qasm  graph.cpp  graph.drawio  graph_53q_rochester.json  graph_description_generic.json  graph_description_square.json  graph_viewer  main.cpp  metric_analysis.txt  paper.tex  plots_2.sh  qasm.cpp  qasm.hpp  requirements.txt  run_analyze_dimensions.pbs  run_ftqc.pbs  run_plots.pbs  run_wisq.pbs  run_wisq3.pbs  run_wisq_conn.pbs  utils.py
.githooks/: pre-commit
benchmarks/old_results/: ex1_midsize.json  ex1_midsize_runs.csv  ex1_naive_runs.csv  ex1_runs_e422fce.csv  naive_vs_congestion_selected_runs.csv  nonNaive_ex1_runs.csv  olderRun_ex1_runs.csv.bak  parallel_runs.csv
benchmarks/old_results_13may/: cache_vs_no_cache_expanded.json  cache_vs_no_cache_runs.csv  compiler_config.json  gaussian_coarse_vs_fine.json  gaussian_coarse_vs_fine_runs.csv  naive_congestion_boost_normal_t_smart_t.json  (+5 more)
config/: __bench_runtime_config.json  best_params_benchmark.json  best_params_benchmark2.json  best_params_benchmark_expanded.status.jsonl  cache_vs_no_cache.json  cache_vs_no_cache_expanded.json  compiler_config.json  compiler_config_expanded.json  default.yaml  different_dimensions_test.json  dimensions.csv  ex1.json  ex1_congestion.json  ex1_congestion_expanded.json  ex1_expanded.json  ex1_midsize.json  ex1_midsize_expanded.json  ex1_naive.json  ex1_naive_expanded.json  ex2.json  ex2_expanded.json  ex_small.json  ex_test.json  gaussian_coarse_vs_fine.json  gaussian_coarse_vs_fine_expanded.json  gaussian_time.json  gaussian_time_expanded.json  gaussian_weight_tuning.json  high_reuse_cache_benchmark.json  mapping_only_benchmark.json  mapping_only_benchmark_expanded.json  mapping_only_benchmark_expanded.status.jsonl  naive_congestion_boost_normal_t_smart_t.json  naive_congestion_boost_normal_t_smart_t_expanded.json  naive_vs_congestion_selected.json  naive_vs_congestion_selected_expanded.json  naive_vs_congestion_vs_boost.json  naive_vs_congestion_vs_boost_expanded.json  parallel.json  parallel_expanded.json  (+19 more)
docker/: Dockerfile.PGO  Dockerfile.compare  Dockerfile.compare.dockerignore  Dockerfile.wisq  Dockerfile.wisq.dockerignore
drawio/: UML.drawio
graphs/: graph_description_generic.json  graph_description_rectangular.json
include/: bench_cuda.hpp  boost_router.hpp  circuit.hpp  commute.hpp  defines.hpp  exceptions.hpp  farthest_from_magic.hpp  gaussian.hpp  graph.hpp  igraph.hpp  layering.hpp  mapping.hpp  maxHeap.hpp  maxHeap.tpp  parsing.hpp  qasm.hpp  qubit.hpp  routing.hpp
metric_analysis_outcomes/: connectivity_minus5_wisq_results.md  connectivity_wisq_results.md  cube_wisq_results.md  epsilon_speed_buffer_winrate.md  metric_analysis.txt  percorso_tuning_sigma.md  pesi_tunati.md
paper/: bib.bib  howto_present_results.tex  main.tex  main_comments_org.tex  paper.tex  preamble.tex  slides.tex
pbs/: run_analyze_dimensions.pbs  run_ftqc.pbs  run_plots.pbs  run_random_naive.pbs  run_wisq.pbs  run_wisq3.pbs  run_wisq_conn.pbs  run_wisq_minsearch.pbs  run_wisq_offset.pbs
qasm_graphs/: qft_20.graph
qasms/: bv_n280.qasm  example.qasm  example_parallel.qasm  ghz_n10.qasm  ghz_n100.qasm  ghz_n125.qasm  ghz_n150.qasm  ghz_n175.qasm  ghz_n20.qasm  ghz_n200.qasm  ghz_n30.qasm  ghz_n300.qasm  ghz_n40.qasm  ghz_n400.qasm  ghz_n5.qasm  ghz_n50.qasm  ghz_n60.qasm  ghz_n70.qasm  ghz_n80.qasm  ghz_n90.qasm  graphstate_n10.qasm  graphstate_n100.qasm  graphstate_n125.qasm  graphstate_n150.qasm  graphstate_n175.qasm  graphstate_n20.qasm  graphstate_n200.qasm  graphstate_n30.qasm  graphstate_n300.qasm  graphstate_n40.qasm  graphstate_n400.qasm  graphstate_n5.qasm  graphstate_n50.qasm  graphstate_n60.qasm  graphstate_n70.qasm  graphstate_n80.qasm  graphstate_n90.qasm  grover_n10.qasm  grover_n5.qasm  ising_n10.qasm  (+133 more)
results/: connectivity_minus3_wisq_results.md  connectivity_minus5_wisq_results.md  connectivity_wisq_results.md  cube_native_vs_wisq_results.md  cube_wisq_results.md  density_winloss_analysis.md  epsilon_speed_buffer_winrate.md  percorso_tuning_sigma.md  pesi_finali.md  random_cube_wisq_analysis.md  random_vs_cube_results.md  random_vs_wisq_results.md
scripts/: Wisq.md  analyze_bfs_retune.py  analyze_bfs_threshold.py  analyze_dimension_classes.py  analyze_dimensions.py  analyze_magic_retune.py  analyze_optimal_dimension.py  analyze_percentage_weight_transfer.py  analyze_sigma_weights.py  build_pgo.sh  build_pgo_docker.sh  circuit_report.py  compare_benchmark_csvs.py  compare_congestion_naive.sh  compare_layer_division.py  compare_wisq.py  compare_wisq3.py  compare_wisq_2.py  compare_wisq_conn.py  extract_wisq.py  filter_gates.py  gen_bfs_retune_configs.py  gen_border_sweep_configs.py  gen_magic_retune_configs.py  generate_all_plots.sh  generate_benchmark_plots.py  generate_benchmark_plots_no_passage.py  generate_benchmark_plots_no_passage_same_circuit.py  generate_ising_circuits.py  generate_mqt_circuits.py  generate_synthetic_circuits.py  gini_plot.py  make-video.sh  make_readable_csv.py  measure_cnot_density.sh  merge_and_plot_results.py  plot_cache_metrics.py  plot_gaussian_relative_weight_gaps.py  plot_metrics_per_param.py  plot_wisq_comparison.py  (+21 more)
src/: bench_cuda.cu  bench_cuda_stub.cpp  circuit.cpp  circuit_metrics.hpp  compute_dimensions.hpp  defines.cpp  expand_config_variants.hpp  gaussian.cpp  graph.cpp  helpers.hpp  igraph.cpp  layering.cpp  main.cpp  mapping.cpp  maxHeap.cpp  one_execution.hpp  parsing.cpp  qasm.cpp  routing.cpp  update_metrics.py  write_csv.hpp
universal_set_qasms/: adder_n4_universal.qasm  adder_n64_transpiled_universal.qasm  continuous_3_17_13_universal.qasm  dnn_n16_universal.qasm  example_universal.qasm  ising_n26_universal.qasm  parallel_big_universal.qasm  parallel_universal.qasm  qft_20_universal.qasm  semplified.qasm
visualization/: README.md  graph_viewer.cpp
(+259 files in other folders)
